fix: add wrap to social styles so heading wraps to new row

--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -16,7 +16,7 @@
     }
     
     @include e(social) {
-        @include flex();
+        @include flex($wrap: wrap);
         width: 100%;
     }
 
